Fixing animation bug on Safari
adding webkit in transform for the flip animation

--- a/memory-games/style.css
+++ b/memory-games/style.css
@@ -75,6 +75,7 @@ body {
 }
 
 .memory-card.flip {
+     -webkit-transform: rotateY(180%); 
     transform: rotateY(180deg);
 }
 
